# json2cppTool

./: .gitignore  README.md
Test/: CMakeLists.txt  EmployeeNoList.cpp  EmployeeNoList.h  UserInfoDetail.cpp  UserInfoDetail.h  UserInfoDetail.json
Test/dto/: EmployeeNoList.cpp  UserInfoDetail.cpp  UserInfoDetail.h
Test/include/: def.h  jsonParse.hpp
Test/src/: main.cpp
cpp/: jsonParse.hpp
python/: json2cppFull.py  json2cppTool.py  requirements.txt
